      (Closes: #785662).
    + [NT] Add a check for packages without intermediate
      directories.
    + [BR] Avoid a false positive in jsom for defaultpresets.xml
      from openmapstreet.
    + [NT] Tweak the "extra-license-file" check to avoid some
      common false-positives.
    + [BR] Raise severity of package-contains-timestamped-gzip.
      (Closes: #778328).
  * checks/java.pm:
    + [NT] Fix "off-by-one" in the check for the maximum permitted
      Java major version.
  * checks/manpages.{desc,pm}:
    + [NT] Retire the hyphen-used-as-minus-sign tag as upstream now
      renders both "-" and "\-" as HYPHEN-MINUS.  (Closes: #785353)
  * checks/po-debconf.pm:
    + [JW] Use TMPDIR rather than TEMPDIR for temporary files.
      (Closes: #787930)
  * checks/source-copyright.pm:
    + [NT] Apply patch from Evgeni Golov to permit multiple
      different "public-domain licenses", as they are expected to
      describe why the affected files are in public domain.
      (Closes: #787248)
  * checks/systemd.{desc,pm}:
    + [NT] Apply patch from Felipe Sateler to mark service files in
      /usr/lib as invalid.  (Closes: #788629)
    + [NT] Apply patch from Felipe Sateler to detect service files
      that use spaces around the = in the key definition.
      (Closes: #786421)

  * collection/{debfiles,doc-base-files,init.d,menu-files}{,.desc}:
    + [NT] Remove deprecated and unused collections.  These were
      deprecated in 2.5.28.  Note that debfiles was omitted in the
      deprecation list by mistake in the original 2.5.28 release.
  * collection/unpacked:
    + [NT] Apply patch from Tomasz Buchert to extract the full time
      in UTC.

  * commands/reporting-sync-state.pm:
    + [NT] Read mirror files as UTF-8 files to avoid mojibake in
      maintainer names.  Once again, thanks to Andreas Rönnquist
      for the report.

  * data/binaries/embedded-libs:
    + [BR] Detect embedded ieee-data package.
  * data/cruft/non-free-license: